--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         },
         {
             input: 'index',
-            output: '链接：\n<d href="http://blog.caozhiming.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozhiming.tk/links/>友情链接</d>"',
+            output: '链接：\n<d href="http://blog.caozhiming.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozhiming.tk/links/">友情链接</d>',
         },
         {
             input: '索引',
-            output: '链接：\n<d href="http://blog.caozhiming.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozhiming.tk/links/>友情链接</d>"',
+            output: '链接：\n<d href="http://blog.caozhiming.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozhiming.tk/links/">友情链接</d>',
         },
         {
             // Loading
@@ -99,7 +99,6 @@
         },
       ],});
       
-      term.type('你好');
       term.type('帮助');
     </script><noscript>抱歉，本程序需要JavaScript才能运行，但是你的浏览器目前似乎无法运行JavaScript。请打开JavaScript或使用其它浏览器。</noscript>
   </body></html>
