--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         },
         {
             input: 'index',
-            output: '链接：\n<d href="http://blog.caozhiming.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozhiming.tk/links/">友情链接</d>',
+            output: '链接：\n<d href="http://blog.caozm.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozm.tk/links/">友情链接</d>',
         },
         {
             input: '索引',
-            output: '链接：\n<d href="http://blog.caozhiming.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozhiming.tk/links/">友情链接</d>',
+            output: '链接：\n<d href="http://blog.caozm.tk/">我的博客</d>\n<d href="https://github.com/cao-zhiming">我的GitHub</d>\n<d href="https://blog.caozm.tk/links/">友情链接</d>',
         },
         {
             // Loading
