--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     title: '曹智铭的网站-命令行终端',
 
     // Entered prefix
-    prefix: 'terminal@caozhiming.tk: ~ <d color="#00f501">$</d> ',
+    prefix: 'terminal@caozm.tk: ~ <d color="#00f501">$</d> ',
 
     // Welcome Message
     welcome: `欢迎来到曹智铭的命令行终端。`,
